--- a/config/cable.yml
+++ b/config/cable.yml
@@ -1,10 +1,12 @@
 development:
-  adapter: async
+  # adapter: async
+  adapter: postgresql
 
 test:
-  adapter: async
+  adapter: postgresql
 
 production:
-  adapter: redis
-  url: redis://localhost:6379/1
-  channel_prefix: weixin_bot_webui_production
+  adapter: postgresql
+  # adapter: redis
+  # url: redis://localhost:6379/1
+  # channel_prefix: weixin_bot_webui_production
